--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>768</width>
-    <height>637</height>
+    <width>1162</width>
+    <height>759</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1162</width>
+    <height>759</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1162</width>
+    <height>759</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>BLE_TOOLS</string>
@@ -21,13 +39,26 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>30</x>
       <y>10</y>
-      <width>221</width>
+      <width>341</width>
       <height>31</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="refresh_com">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Refresh</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QComboBox" name="COMx">
        <property name="enabled">
@@ -44,31 +75,174 @@
      </item>
     </layout>
    </widget>
+   <widget class="QGroupBox" name="Cmd">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>20</y>
+      <width>141</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Protocol_Test</string>
+    </property>
+    <widget class="QPushButton" name="setDate">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>40</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>SetDate</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="getdata">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>80</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>GetDate</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="version">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>120</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>GetVersion</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="AdjustChip">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>160</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>AdjustChip</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="wave">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>200</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>DrawWave</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="StopDrawWave">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>240</y>
+       <width>81</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>StopDrawWave</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QTextEdit" name="protocol_result">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>400</y>
+      <width>711</width>
+      <height>281</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="total_steps">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>30</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TotalStep</string>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="dateEdit">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>30</y>
+      <width>130</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>21</x>
-      <y>80</y>
-      <width>721</width>
-      <height>481</height>
+      <x>34</x>
+      <y>62</y>
+      <width>331</width>
+      <height>311</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
       <widget class="QListWidget" name="listWidget"/>
      </item>
-     <item row="0" column="1" rowspan="3">
-      <widget class="QTextEdit" name="uartRecText"/>
-     </item>
-     <item row="1" column="0">
+     <item>
       <widget class="QPushButton" name="scan">
        <property name="text">
         <string>Scan</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item>
       <widget class="QPushButton" name="clear_list">
+       <property name="text">
+        <string>Clear</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>380</y>
+      <width>331</width>
+      <height>301</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="QTextEdit" name="uartRecText"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="clear_log">
        <property name="text">
         <string>Clear</string>
        </property>
@@ -82,7 +256,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>768</width>
+     <width>1162</width>
      <height>23</height>
     </rect>
    </property>
