add reboot command

--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -240,6 +240,45 @@
       <string>RealTimeEnd</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="battery">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>20</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Battery</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="breakdown">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>50</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Breakdown</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="restart">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>80</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Restart</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
@@ -314,12 +353,6 @@
      </item>
     </layout>
    </widget>
-   <zorder>layoutWidget</zorder>
-   <zorder>Cmd</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>protocol_result</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
