--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -298,6 +298,19 @@
       <bool>false</bool>
      </property>
     </widget>
+    <widget class="QPushButton" name="erase_chip">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>110</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>擦除FLASH</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
@@ -372,7 +385,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>420</x>
