--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -407,6 +407,32 @@
      </item>
     </layout>
    </widget>
+   <widget class="QPushButton" name="resetid">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>50</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ResetId</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setID">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>100</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SetId</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
