--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -433,6 +433,19 @@
      <string>SetId</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="restart_record">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>140</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GetRestart</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
