--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -446,6 +446,19 @@
      <string>GetRestart</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="getalgoparam">
+    <property name="geometry">
+     <rect>
+      <x>1034</x>
+      <y>10</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GetAlgoParam</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
