--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -459,6 +459,19 @@
      <string>GetAlgoParam</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="getuserid">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>180</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GetUserId</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
